--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   kernel:
     runs-on: ubuntu-latest
-    strategy:
-            matrix:
-                version: [6.7-working, 6.8]
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -30,13 +28,13 @@ jobs:
         run: sudo apt update && sudo apt install build-essential gcc-aarch64-linux-gnu bc flex bison 7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
 
       - name: Build kernel
-        run: sudo sh nabu-kernel_build.sh ${{ matrix.version }}
+        run: sudo sh nabu-kernel_build.sh 
 
       - name: Upload deb packages
         uses: actions/upload-artifact@v4.0.0
         with:
           # Artifact name
-          name: xiaomi-nabu-debs_${{ matrix.version }}
+          name: lenovo-q706f-debs
           path: ${{ github.workspace }}/*.deb
           
   rootfs:
@@ -46,24 +44,23 @@ jobs:
     strategy:
             matrix:
                 desktop: [ubuntu-desktop, lomiri]
-                kernel: [6.7-working, 6.8]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
-          pattern: xiaomi-nabu-debs*
+          pattern: lenovo-q706f-debs*
       - name: Install Dependencies
         run: sudo apt update && sudo apt install unzip build-essential gcc-aarch64-linux-gnu bc flex bison 7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
 
       - name: Build rootfs
-        run: sudo sh nabu-rootfs_build.sh ${{ matrix.desktop }} ${{ matrix.kernel }}
+        run: sudo sh nabu-rootfs_build.sh ${{ matrix.desktop }} 
 
       - name: Upload rootfs.7z
         uses: actions/upload-artifact@v4.0.0
         with:
           # Artifact name
-          name: rootfs_${{ matrix.desktop }}_${{ matrix.kernel }}
+          name: rootfs_${{ matrix.desktop }}
           path: rootfs.7z
           compression-level: 0
