--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
         
       - name: Install Dependencies
-        run: sudo apt update && sudo apt install build-essential gcc-aarch64-linux-gnu bc flex bison 7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
+        run: sudo apt update && sudo apt install build-essential gcc-aarch64-linux-gnu flex bison 7zip kmod bash cpio binutils tar git wget libssl-dev dpkg-dev debhelper libelf-dev build-essential openssl pkg-config libssl-dev libncurses5-dev minizip libc6-dev libidn11-dev rsync liblz4-tool
 
       - name: Build kernel
         run: sudo sh nabu-kernel_build.sh 
@@ -64,7 +64,7 @@ jobs:
         with:
           pattern: lenovo-q706f-debs*
       - name: Install Dependencies
-        run: sudo apt update && sudo apt install unzip build-essential gcc-aarch64-linux-gnu bc flex bison 7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
+        run: sudo apt update && sudo apt install unzip build-essential gcc-aarch64-linux-gnu bc flex bison 7zip kmod bash cpio binutils tar git wget dpkg
 
       - name: Build rootfs
         run: sudo sh nabu-rootfs_build.sh ${{ matrix.desktop }} 
